archived/cachet/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cachet
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cachet
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: cachet
    spec:
      containers:
      - name: cachet
        image: dirtycajunrice/cachet-docker_cachet:rebuild
        ports:
          - containerPort: 8000
        volumeMounts:
          - name: cachet-files
            mountPath: /var/www/html/app/Repositories/Metric/PgSqlRepository.php
            subPath: PgSqlRepository.php
      volumes:
        - name: cachet-files
          configMap:
            name: cachet-files
            items:
            - key: PgSqlRepository.php
              path: PgSqlRepository.php
              mode: 0777
