archived/cachet/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  annotations:
    kubernetes.io/ingress.class: traefik
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    traefik.ingress.kubernetes.io/router.priority: "10"
    traefik.ingress.kubernetes.io/router.tls: "true"
    cert-manager.io/cluster-issuer: le-production
  labels:
    app: cachet
  name: cachet
spec:
  ingressClassName: traefik
  rules:
    - host: status.cajun.pro
      http:
        paths:
          - backend:
              serviceName: cachet
              servicePort: 8000
            path: /
  tls:
    - hosts:
        - status.cajun.pro
      secretName: status-cajun-pro
